--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>8.0.1</Version>
+    <Version>8.0.2</Version>
     <Description>通讯物理口封装</Description>
-    <PackageReleaseNotes>修复TCPclient在网络断开情况下快速发现</PackageReleaseNotes>
+    <PackageReleaseNotes>修复公共库bug</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
     <Authors>CSoft</Authors>
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="CSoft.LogInterface" Version="8.0.0" />
-    <PackageReference Include="CSoft.Utils" Version="8.0.0" />
+    <PackageReference Include="CSoft.Utils" Version="8.0.1" />
     <PackageReference Include="System.IO.Ports" Version="8.0.0" />
   </ItemGroup>
 
