--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>8.0.8</Version>
+    <Version>8.0.9</Version>
     <Description>通讯物理口封装</Description>
-    <PackageReleaseNotes>更新CSoft.Utils依赖</PackageReleaseNotes>
+    <PackageReleaseNotes>调整KeepAlive</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
     <Authors>CSoft</Authors>
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="CSoft.LogInterface" Version="8.0.0" />
-    <PackageReference Include="CSoft.Utils" Version="8.0.5" />
+    <PackageReference Include="CSoft.Utils" Version="8.0.6" />
     <PackageReference Include="System.IO.Ports" Version="8.0.0" />
   </ItemGroup>
 
