--- a/TopPortLib/TopPortLib.csproj
+++ b/TopPortLib/TopPortLib.csproj
@@ -1,34 +1,38 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
-    <Version>8.1.3</Version>
-    <Description>通讯口使用类库</Description>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>更新CSoft.Utils依赖</PackageReleaseNotes>
-    <PackageId>CSoft.TopPortLib</PackageId>
-    <Authors>CSoft</Authors>
-    <Company>CSoft</Company>
-    <PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
-    <PackageIcon>logo.png</PackageIcon>
-    <ImplicitUsings>enable</ImplicitUsings>
-	<LangVersion>default</LangVersion>
-	<DocumentationFile>bin\TopPortLib.xml</DocumentationFile>
-	<Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
+		<Version>8.1.4</Version>
+		<Description>通讯口使用类库</Description>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageReleaseNotes>
+			1.修复异步口解析等待
+			2.异步口接口变更
+			3.异步口支持返回命令对应多个请求，使用请求帧中的特征来识别对应返回
+		</PackageReleaseNotes>
+		<PackageId>CSoft.TopPortLib</PackageId>
+		<Authors>CSoft</Authors>
+		<Company>CSoft</Company>
+		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
+		<PackageIcon>logo.png</PackageIcon>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<LangVersion>default</LangVersion>
+		<DocumentationFile>bin\TopPortLib.xml</DocumentationFile>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Include="..\logo.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\logo.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Communication\Communication.csproj" />
-    <ProjectReference Include="..\Crow\Crow.csproj" />
-    <ProjectReference Include="..\Parser\Parser.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Communication\Communication.csproj" />
+		<ProjectReference Include="..\Crow\Crow.csproj" />
+		<ProjectReference Include="..\Parser\Parser.csproj" />
+	</ItemGroup>
 
 </Project>
