--- a/TopPortLib/TopPortLib.csproj
+++ b/TopPortLib/TopPortLib.csproj
@@ -2,12 +2,13 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
-		<Version>8.2.2-pre</Version>
+		<Version>8.2.3</Version>
 		<Description>通讯口使用类库</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageReleaseNotes>
 			服务端异步口请求多次回复
 			服务端异步口数据回复改接口为IAsyncResponse_Server
+			修复异步口发送日志延迟问题
 		</PackageReleaseNotes>
 		<PackageId>CSoft.TopPortLib</PackageId>
 		<Authors>CSoft</Authors>
