--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>8.1.5</Version>
+    <Version>8.1.6</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		IPhysicalPort_Server新增接口GetClientInfos
+		Tcp开放设置keepAlive,keepAliveTime,keepAliveInterval,keepAliveRetryCount,noDelay,reuseAddress
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
