--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>8.2.1</Version>
+    <Version>9.0.0</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		调整 KeepAlive 参数单位
+		更新.net9.0
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
@@ -22,9 +22,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSoft.LogInterface" Version="8.0.0" />
-    <PackageReference Include="CSoft.Utils" Version="8.0.9" />
-    <PackageReference Include="System.IO.Ports" Version="8.0.0" />
+    <PackageReference Include="CSoft.LogInterface" Version="9.0.0" />
+    <PackageReference Include="CSoft.Utils" Version="9.0.0" />
+    <PackageReference Include="System.IO.Ports" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
