--- a/Crow/Crow.csproj
+++ b/Crow/Crow.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Version>8.1.1</Version>
+		<Version>9.0.0</Version>
 		<Description>数据收发队列</Description>
 		<PackageId>CSoft.Crow</PackageId>
 		<Authors>CSoft</Authors>
 		<Company>CSoft</Company>
-		<PackageReleaseNotes>更新CSoft.Utils依赖</PackageReleaseNotes>
+		<PackageReleaseNotes>更新.net9.0</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
 		<PackageIcon>logo.png</PackageIcon>
@@ -26,7 +26,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CSoft.Utils" Version="8.0.9" />
+		<PackageReference Include="CSoft.Utils" Version="9.0.0" />
 	</ItemGroup>
 
 </Project>
