--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Description>数据分帧解析器</Description>
-		<Version>8.0.10</Version>
+		<Version>9.0.0</Version>
 		<Authors>CSoft</Authors>
 		<PackageId>CSoft.Parser</PackageId>
-		<PackageReleaseNotes>更新CSoft.Utils依赖</PackageReleaseNotes>
+		<PackageReleaseNotes>更新.net9.0</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
 		<PackageIcon>logo.png</PackageIcon>
@@ -18,8 +18,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CSoft.LogInterface" Version="8.0.0" />
-		<PackageReference Include="CSoft.Utils" Version="8.0.9" />
+		<PackageReference Include="CSoft.LogInterface" Version="9.0.0" />
+		<PackageReference Include="CSoft.Utils" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
