--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>9.2.0</Version>
+    <Version>9.2.1</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		添加服务端发送数据事件
+		更新依赖
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
@@ -23,8 +23,8 @@
 
   <ItemGroup>
     <PackageReference Include="CSoft.LogInterface" Version="9.0.0" />
-    <PackageReference Include="CSoft.Utils" Version="9.0.0" />
-    <PackageReference Include="System.IO.Ports" Version="9.0.0" />
+    <PackageReference Include="CSoft.Utils" Version="9.1.1" />
+    <PackageReference Include="System.IO.Ports" Version="9.0.1" />
   </ItemGroup>
 
   <ItemGroup>
