--- a/Crow/Crow.csproj
+++ b/Crow/Crow.csproj
@@ -3,12 +3,12 @@
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Version>9.1.0</Version>
+		<Version>9.1.1</Version>
 		<Description>数据收发队列</Description>
 		<PackageId>CSoft.Crow</PackageId>
 		<Authors>CSoft</Authors>
 		<Company>CSoft</Company>
-		<PackageReleaseNotes>更改处理队列</PackageReleaseNotes>
+		<PackageReleaseNotes>更新依赖</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
 		<PackageIcon>logo.png</PackageIcon>
@@ -26,8 +26,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CSoft.Utils" Version="9.0.0" />
-		<PackageReference Include="System.Threading.Channels" Version="9.0.0" />
+		<PackageReference Include="CSoft.Utils" Version="9.1.1" />
+		<PackageReference Include="System.Threading.Channels" Version="9.0.1" />
 	</ItemGroup>
 
 </Project>
