--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -4,10 +4,10 @@
 		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Description>数据分帧解析器</Description>
-		<Version>9.1.0</Version>
+		<Version>9.1.1</Version>
 		<Authors>CSoft</Authors>
 		<PackageId>CSoft.Parser</PackageId>
-		<PackageReleaseNotes>添加内置处理队列</PackageReleaseNotes>
+		<PackageReleaseNotes>更新依赖</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
 		<PackageIcon>logo.png</PackageIcon>
@@ -19,8 +19,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="CSoft.LogInterface" Version="9.0.0" />
-		<PackageReference Include="CSoft.Utils" Version="9.0.0" />
-		<PackageReference Include="System.Threading.Channels" Version="9.0.0" />
+		<PackageReference Include="CSoft.Utils" Version="9.1.1" />
+		<PackageReference Include="System.Threading.Channels" Version="9.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
