--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>9.2.1</Version>
+    <Version>9.2.2</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		更新依赖
+		TcpServer在发送时如果未找到参数ClientId将抛出异常DriveNotFoundException
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
